--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -20,3 +20,7 @@ app_logout:
 add_post:
     path: /post/add
     controller: App\Controller\PostController::add
+
+post_show:
+    path: /post/{id}
+    controller: App\Controller\PostController::show
