--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,18 +1,19 @@
+# config/packages/security.yaml
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+    # Hashery haseł
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
         App\Entity\User:
             algorithm: auto
 
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+    # Źródła użytkowników
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
                 property: email
 
+    # Firewall
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -23,35 +24,24 @@ security:
             custom_authenticator: App\Security\LoginFormAuthenticator
             logout:
                 path: app_logout
-                # where to redirect after logout
                 target: app_login
+            # Włącz kontrolę dostępu do określonych ścieżek
+            # Właściwy sposób skonfigurowania firewalla
+            # Możesz ustawić secure: false, jeśli chcesz pozwolić na dostęp do publicznych stron bez wymagań dotyczących uwierzytelnienia
+            security: true
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
+    # Hierarchia ról
     role_hierarchy:
         ROLE_ADMIN: [ROLE_USER]
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+    # Kontrola dostępu
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/login, roles: PUBLIC_ACCESS}
-        - { path: ^/, roles: ROLE_USER}
+        - { path: ^/login, roles: PUBLIC_ACCESS }            # Dostęp do strony logowania dla wszystkich
+        - { path: ^/post/\d+$, roles: PUBLIC_ACCESS }        # Dostęp do szczegółów postów dla wszystkich (np. /post/21)
+        - { path: ^/post/, roles: ROLE_USER }                # Dostęp do edycji i dodawania postów wymaga roli ROLE_USER
+        - { path: ^/$, roles: PUBLIC_ACCESS }                # Dostęp do strony głównej dla wszystkich
+        - { path: ^/, roles: ROLE_ADMIN }                    # Wszystkie inne ścieżki wymagają roli ROLE_ADMIN                  # Wszystkie inne ścieżki wymagają roli ROLE_ADMIN
+        # Dostęp do innych stron wymaga roli ROLE_USER
 
-when@test:
-    security:
-        password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+    # Inne ustawienia
+    # Można dodać więcej reguł jeśli potrzebujesz specyficznej konfiguracji
