--- a/composer.json
+++ b/composer.json
@@ -100,6 +100,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
+        "fakerphp/faker": "^1.5",
         "friendsofphp/php-cs-fixer": "^3.64",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.10",
